General markup and styling of site
Made the sites responsive, added a burger menu for tablet and mobile, added javascript validation for contact form

--- a/index.html
+++ b/index.html
@@ -24,21 +24,34 @@
             <li><a href="contact.html">Contact Us</a></li>
           </ul>
         </nav>
+        <div class="burger">
+          <div class="line"></div>
+          <div class="line"></div>
+          <div class="line"></div>
+          <div class="social">
+            <a href="#" class="fa fa-facebook"></a>
+            <a href="#" class="fa fa-twitter"></a>
+            <a href="#" class="fa fa-envelope"></a>
+          </div>
+        </div>
         <div class="social">
           <a href="#" class="fa fa-facebook"></a>
           <a href="#" class="fa fa-twitter"></a>
           <a href="#" class="fa fa-envelope"></a>
         </div>
       </header>
-      <main id="main">
+      <main class="main">
         <h2 id="welcomeText">MARS 2020</h2>
         <p class="subText">investigating the potential for life on Mars</p>
       </main>
-      <section>
-        <button id="callToAction" type="button" name="button">LEARN MORE</button>
-      </section>
-      <footer>3
-
+      <div id="newMain"></div>
+      <script src="/js/script.js"></script>
+      <footer id="footer">
+        <div class="socialMobile">
+          <a href="#" class="fa fa-facebook"></a>
+          <a href="#" class="fa fa-twitter"></a>
+          <a href="#" class="fa fa-envelope"></a>
+        </div>
       </footer>
     </div>
   </body>
