--- a/overview.html
+++ b/overview.html
@@ -24,13 +24,23 @@
             <li><a href="contact.html">Contact Us</a></li>
           </ul>
         </nav>
+        <div class="burger">
+          <div class="line"></div>
+          <div class="line"></div>
+          <div class="line"></div>
+          <div class="social">
+            <a href="#" class="fa fa-facebook"></a>
+            <a href="#" class="fa fa-twitter"></a>
+            <a href="#" class="fa fa-envelope"></a>
+          </div>
+        </div>
         <div class="social">
           <a href="#" class="fa fa-facebook"></a>
           <a href="#" class="fa fa-twitter"></a>
           <a href="#" class="fa fa-envelope"></a>
         </div>
       </header>
-      <main id="main">
+      <main class="main">
         <div class="topImage">
           <img id="overviewBanner" src="/images/marsBanner.jpg" alt="Astronaut walking">
         </div>
@@ -69,8 +79,15 @@
           <img id="overviewImg" src="/images/marsRover.jpg" alt="Mars rover vehicle">
         </div>
       </main>
-      <footer>
+      <div id="newMain"></div>
+      <footer id="footer">
+        <div class="socialMobile">
+          <a href="#" class="fa fa-facebook"></a>
+          <a href="#" class="fa fa-twitter"></a>
+          <a href="#" class="fa fa-envelope"></a>
+        </div>
       </footer>
     </div>
+    <script src="/js/script.js"></script>
   </body>
 </html>
