--- a/timeline.html
+++ b/timeline.html
@@ -24,13 +24,23 @@
             <li><a href="contact.html">Contact Us</a></li>
           </ul>
         </nav>
+        <div class="burger">
+          <div class="line"></div>
+          <div class="line"></div>
+          <div class="line"></div>
+          <div class="social">
+            <a href="#" class="fa fa-facebook"></a>
+            <a href="#" class="fa fa-twitter"></a>
+            <a href="#" class="fa fa-envelope"></a>
+          </div>
+        </div>
         <div class="social">
           <a href="#" class="fa fa-facebook"></a>
           <a href="#" class="fa fa-twitter"></a>
           <a href="#" class="fa fa-envelope"></a>
         </div>
       </header>
-      <main>
+      <main class="main" id="mainTimeline">
         <div class="topImage">
           <img id="overviewBanner" src="/images/timeline.png" alt="Picture of mars surface">
         </div>
@@ -100,8 +110,15 @@
           </div>
         </section>
       </main>
-      <footer>
+      <div id="newMain"></div>
+      <footer id="footer">
+        <div class="socialMobile">
+          <a href="#" class="fa fa-facebook"></a>
+          <a href="#" class="fa fa-twitter"></a>
+          <a href="#" class="fa fa-envelope"></a>
+        </div>
       </footer>
     </div>
+    <script src="/js/script.js"></script>
   </body>
 </html>
