Resized images, changed colors and worked on improving responsiveness

--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
               </div>
             </li>
             <li><a href="weather.html">Mars Weather</a></li>
-            <li><a href="contact.html">Contact Us</a></li>
+            <li><a class="active" href="contact.html">Contact Us</a></li>
           </ul>
         </nav>
         <div class="burger">
@@ -73,6 +73,10 @@
           <a href="#" class="fa fa-facebook"></a>
           <a href="#" class="fa fa-twitter"></a>
           <a href="#" class="fa fa-envelope"></a>
+        </div>
+        <div class="desktopFooter">
+          <p class="newsletterP">Sign up to our newsletter</p>
+          <input type="email" name="" type="submit" placeholder="Email Adress here"><input type="submit">
         </div>
       </footer>
     </div>
