--- a/timeline.html
+++ b/timeline.html
@@ -15,7 +15,7 @@
         <nav>
           <ul>
             <li class="dropdown">
-              <a href="javascript:void(0)" class="dropbtn"><a href="overview.html">Mission Overview</a></a>
+              <a href="javascript:void(0)" class="dropbtn"><a class="active" href="overview.html">Mission Overview</a></a>
               <div class="dropdown-content">
                 <a href="timeline.html">Mission Timeline</a>
               </div>
@@ -42,7 +42,7 @@
       </header>
       <main class="main" id="mainTimeline">
         <div class="topImage">
-          <img id="overviewBanner" src="/images/timeline.png" alt="Picture of mars surface">
+          <img id="overviewBanner" src="/images/timeline.jpg" alt="Picture of mars surface">
         </div>
         <div class="textBox1">
           <h2>MISSION TIMELINE</h2>
@@ -116,6 +116,10 @@
           <a href="#" class="fa fa-facebook"></a>
           <a href="#" class="fa fa-twitter"></a>
           <a href="#" class="fa fa-envelope"></a>
+        </div>
+        <div class="desktopFooter">
+          <p class="newsletterP">Sign up to our newsletter</p>
+          <input type="email" name="" type="submit" placeholder="Email Adress here"><input type="submit">
         </div>
       </footer>
     </div>
