--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mars 2020</title>
+    <meta name="description" content="A microsite providing all relevant information about Nasa's upcoming Mars 2020 mission.">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
@@ -11,7 +12,7 @@
   <body>
     <div id="container">
       <header>
-        <h1>MARS 2020</h1>
+        <h1><a id="logoLink" href="index.html">MARS 2020</a></h1>
         <nav>
           <ul>
             <li class="dropdown">
@@ -45,14 +46,18 @@
         <p class="subText">investigating the potential for life on Mars</p>
       </main>
       <div id="newMain"></div>
-      <script src="/js/script.js"></script>
       <footer id="footer">
         <div class="socialMobile">
           <a href="#" class="fa fa-facebook"></a>
           <a href="#" class="fa fa-twitter"></a>
           <a href="#" class="fa fa-envelope"></a>
         </div>
+        <div class="desktopFooter">
+          <p class="newsletterP">Sign up to our newsletter</p>
+          <input type="email" name="" type="submit" placeholder="Email Adress here"><input type="submit">
+        </div>
       </footer>
     </div>
+    <script src="/js/script.js"></script>
   </body>
 </html>
