--- a/overview.html
+++ b/overview.html
@@ -15,7 +15,7 @@
         <nav>
           <ul>
             <li class="dropdown">
-              <a href="javascript:void(0)" class="dropbtn"><a href="overview.html">Mission Overview</a></a>
+              <a href="javascript:void(0)" class="dropbtn"><a class="active" href="overview.html">Mission Overview</a></a>
               <div class="dropdown-content">
                 <a href="timeline.html">Mission Timeline</a>
               </div>
@@ -47,13 +47,13 @@
         <div class="textBox1">
           <h2>MISSION OVERVIEW</h2>
           <hr class="h2Line">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+          <p class="overviewP">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
              ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
              laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
              voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
              id est laborum.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+          <p class="overviewP">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
              ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
              laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
              voluptate velit esse cillum dolore eu fugiat nulla pariatur.
@@ -62,13 +62,13 @@
           <hr class="overviewHr">
         </div>
         <div class="textBox2">
-          <p id="textbox2P">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+          <p class="overviewP">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
              ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
              laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
              voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
              id est laborum.</p>
-         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+         <p class="overviewP">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
              ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
              laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
              voluptate velit esse cillum dolore eu fugiat nulla pariatur.
@@ -76,7 +76,7 @@
              id est laborum.</p>
         </div>
         <div class="imageBox">
-          <img id="overviewImg" src="/images/marsRover.jpg" alt="Mars rover vehicle">
+          <img id="overviewImg" src="/images/marsRover2.jpg" alt="Mars rover vehicle">
         </div>
       </main>
       <div id="newMain"></div>
@@ -85,6 +85,10 @@
           <a href="#" class="fa fa-facebook"></a>
           <a href="#" class="fa fa-twitter"></a>
           <a href="#" class="fa fa-envelope"></a>
+        </div>
+        <div class="desktopFooter">
+          <p class="newsletterP">Sign up to our newsletter</p>
+          <input type="email" name="" type="submit" placeholder="Email Adress here"><input type="submit">
         </div>
       </footer>
     </div>
