Added alt text to images and changed color on text

--- a/weather.html
+++ b/weather.html
@@ -61,7 +61,7 @@
                 <p class="thumbPhigh">HIGH: <span id="high"></span></p></p>
                 <p class="thumbPavg">AVG: <span id="avg"></span></p></p>
                 <p class="thumbPlow">LOW: <span id="low"></span></p></p>
-                <img id="weatherToday" class="weatherThumb" src="/images/currentWeather.png" alt="">
+                <img id="weatherToday" class="weatherThumb" src="/images/currentWeather.png" alt="Picture of a planet, with a bright star in background">
               </div>
           </div>
           <div class="weatherbox weatherBox2">
@@ -75,7 +75,7 @@
                 <p class="thumbPhigh">HIGH: <span id="highWind"></span></p></p>
                 <p class="thumbPavg">AVG: <span id="avgWind"></span></p></p>
                 <p class="thumbPlow">LOW: <span id="lowWind"></span></p></p>
-                <img id="windImg" class="weatherThumb" src="/images/currentWeather2.png" alt="">
+                <img id="windImg" class="weatherThumb" src="/images/currentWeather2.png" alt="Picture of a planet, with pitch black space around">
               </div>
           </div>
         </section>
