--- a/overview.html
+++ b/overview.html
@@ -4,8 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mars 2020 | Mission Overview</title>
+    <meta name="description" content="The Mission Overview page for Mars 2020 mission. Here you can find the most important information, links to launches and images for this mission">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/pages.css">
   </head>
   <body>
@@ -47,36 +49,53 @@
         <div class="textBox1">
           <h2>MISSION OVERVIEW</h2>
           <hr class="h2Line">
-          <p class="overviewP">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-             ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-             laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-             voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-             Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
-             id est laborum.</p>
-          <p class="overviewP">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-             ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-             laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-             voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-             Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
-             id est laborum.</p>
+          <div class="overviewContainer">
+            <div class="textContainer">
+              <p class="overviewP">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
+                id est laborum. Duis aute irure dolor in reprehenderit in
+                voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
+                id est laborum.</p>
+              <p class="overviewP2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
+                id est laborum.</p>
+            </div>
+            <div class="imageBox">
+              <img id="overviewImg" src="/images/marsRover2.jpg" alt="Mars rover vehicle">
+            </div>
+          </div>
           <hr class="overviewHr">
         </div>
         <div class="textBox2">
-          <p class="overviewP">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-             ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-             laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-             voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-             Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
-             id est laborum.</p>
-         <p class="overviewP">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-             ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-             laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-             voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-             Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
-             id est laborum.</p>
-        </div>
-        <div class="imageBox">
-          <img id="overviewImg" src="/images/marsRover2.jpg" alt="Mars rover vehicle">
+          <div class="overviewContainer">
+            <div class="imageBox2">
+              <img id="overviewImg" src="/images/marsRover2.jpg" alt="Mars rover vehicle">
+            </div>
+            <div class="textContainer">
+              <p class="overviewP3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
+                id est laborum. Duis aute irure dolor in reprehenderit in
+                voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
+                id est laborum.</p>
+              <p class="overviewP4">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
+                id est laborum.</p>
+            </div>
+          </div>
         </div>
       </main>
       <div id="newMain"></div>
@@ -88,7 +107,9 @@
         </div>
         <div class="desktopFooter">
           <p class="newsletterP">Sign up to our newsletter</p>
-          <input type="email" name="" type="submit" placeholder="Email Adress here"><input type="submit">
+          <label for="Email"></label>
+            <input type="text" name="email" placeholder="Email Adress here"><input type="button" value="SEND">
+          </label>
         </div>
       </footer>
     </div>
