--- a/timeline.html
+++ b/timeline.html
@@ -4,8 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mars 2020 | Mission Timeline</title>
+    <meta name="description" content="Timeline and detailed description of all stages for Mars 2020 mission">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/pages.css">
   </head>
   <body>
@@ -54,7 +56,7 @@
         <h3>STAGE DETAILS</h3>
         <section id="stagesGrid">
           <div class="stagesBox1 stagesBox">
-            <h4 id="stagesH4">STAGE 1</h4>
+            <h4 class="stagesH4">STAGE 1</h4>
             <div class="stagesText">
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                  ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
@@ -65,7 +67,7 @@
             </div>
           </div>
           <div class="stagesBox2 stagesBox">
-            <h4 id="stagesH4">STAGE 2</h4>
+            <h4 class="stagesH4">STAGE 2</h4>
             <div class="stagesText">
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                  ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
@@ -76,7 +78,7 @@
             </div>
           </div>
           <div class="stagesBox3 stagesBox">
-            <h4 id="stagesH4">STAGE 3</h4>
+            <h4 class="stagesH4">STAGE 3</h4>
             <div class="stagesText">
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                  ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
@@ -87,7 +89,7 @@
             </div>
           </div>
           <div class="stagesBox4 stagesBox">
-            <h4 id="stagesH4">STAGE 4</h4>
+            <h4 class="stagesH4">STAGE 4</h4>
             <div class="stagesText">
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                  ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
@@ -98,7 +100,7 @@
             </div>
           </div>
           <div class="stagesBox5 stagesBox">
-            <h4 id="stagesH4">STAGE 5</h4>
+            <h4 class="stagesH4">STAGE 5</h4>
             <div class="stagesText">
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                  ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
@@ -119,7 +121,9 @@
         </div>
         <div class="desktopFooter">
           <p class="newsletterP">Sign up to our newsletter</p>
-          <input type="email" name="" type="submit" placeholder="Email Adress here"><input type="submit">
+          <label for="Email"></label>
+            <input type="text" name="email" placeholder="Email Adress here"><input type="button" value="SEND">
+          </label>
         </div>
       </footer>
     </div>
