--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="A microsite providing all relevant information about Nasa's upcoming Mars 2020 mission.">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
@@ -54,7 +55,9 @@
         </div>
         <div class="desktopFooter">
           <p class="newsletterP">Sign up to our newsletter</p>
-          <input type="email" name="" type="submit" placeholder="Email Adress here"><input type="submit">
+          <label for="Email"></label>
+            <input type="text" name="email" placeholder="Email Adress here"><input type="button" value="SEND">
+          </label>
         </div>
       </footer>
     </div>
