Small changes to the countdown timer and styling for call to action button

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
       <main class="main">
         <h2 id="welcomeText">MARS 2020</h2>
         <p class="subText">investigating the potential for life on Mars</p>
+        <button id="callToAction" type="button" name="button"><a href="overview.html">LEARN MORE NOW</a></button>
       </main>
       <div id="newMain"></div>
       <footer id="footer">
