--- a/timeline.html
+++ b/timeline.html
@@ -109,7 +109,7 @@
         <section id="countdownSection">
           <h4 id="countdownH4">Countdown to launch: </h4>
           <div class="countdownTimer">
-
+            <p class="timerP"></p>
           </div>
         </section>
       </main>
