Changed some font sizes, added id to email input, removed unused javascript variables

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="desktopFooter">
           <p class="newsletterP">Sign up to our newsletter</p>
           <label for="Email"></label>
-            <input type="text" name="email" placeholder="Email Adress here"><input type="button" value="SEND">
+            <input id="Email"type="text" name="email" placeholder="Email Adress here"><input type="button" value="SEND">
           </label>
         </div>
       </footer>
